ini-persist/tests/compile-fail/unknown_attr.stderr
error: unknown ini attribute `bogus`
 --> tests/compile-fail/unknown_attr.rs:4:7
  |
4 | #[ini(bogus)]
  |       ^^^^^

error: unknown ini attribute `bogus`
  --> tests/compile-fail/unknown_attr.rs:12:11
   |
12 |     #[ini(bogus)]
   |           ^^^^^

error: unknown ini attribute `bogus`
  --> tests/compile-fail/unknown_attr.rs:17:7
   |
17 | #[ini(bogus)]
   |       ^^^^^

error: unknown ini attribute `bogus`
  --> tests/compile-fail/unknown_attr.rs:24:11
   |
24 |     #[ini(bogus)]
   |           ^^^^^

error: unknown ini attribute `bogus`
  --> tests/compile-fail/unknown_attr.rs:29:7
   |
29 | #[ini(bogus)]
   |       ^^^^^

error: unknown ini attribute `bogus`
  --> tests/compile-fail/unknown_attr.rs:36:11
   |
36 |     #[ini(bogus)]
   |           ^^^^^
